# fishbowl

./: .env  .env.example  Cargo.toml  README.md
data/: products.csv  users.csv  wishlists.csv
migrations/2023-12-23-213254_create_products/: up.sql
migrations/2023-12-25-230509_create_users/: up.sql
migrations/2023-12-26-004415_create_wishlists/: down.sql  up.sql
migrations/2023-12-27-154010_populate_products_users_wishlists/: down.sql  up.sql
migrations/2023-12-28-021750_create_wishes/: down.sql  up.sql
migrations/2024-01-10-014930_create_sponsors/: up.sql
migrations/2024-08-02-201030_create_followers/: up.sql
src/: api.rs  cli.rs  controllers.rs  database.rs  home.rs  lib.rs  main.rs  models.rs  schema.rs  services.rs
src/api/: admin.rs  auth.rs  errors.rs  products.rs  resources.rs  responses.rs  utils.rs  validations.rs  wishlists.rs
src/api/admin/: controllers.rs
src/api/auth/: controllers.rs  mod.rs  models.rs  (+1 more)
src/cli/: list.rs  populate.rs
src/controllers/: products.rs
src/database/: contracts.rs  mocks.rs  primary_impl.rs
src/services/: database.rs  notifications.rs  primary.rs
static/: index.html  test-file.txt
tests/: api.rs  cli.rs  products.rs
tests/admin/: mod.rs
tests/api_auth/: mod.rs
tests/products/: mod.rs
tests/sponsors/: mod.rs
tests/utils/: mod.rs  test_auth_repo.rs  test_product_repo.rs  test_sponsor_repo.rs  test_user_repo.rs  test_wish_repo.rs  test_wishlist_repo.rs
tests/wishlists/: mod.rs
ui/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.app.json
ui/src/: App.vue  interfaces.ts  store.ts
(+44 files in other folders)
