[package]
name = "fishbowl"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jsonwebtoken = "8.0"
salvo = {  version = "0.59", features = ["anyhow", "jwt-auth", "serve-static", "cors"] }
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = "*"
csv = "1.3.0"
thiserror = "1.0.56"
