[package]
name = "fishbowl"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jsonwebtoken = "8.0"
salvo = {  version = "0.65.0", features = ["anyhow", "jwt-auth", "serve-static", "cors", "test"] }
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = "*"
csv = "1.3.0"
thiserror = "1.0.56"
sha2 = "0.10.8"
chrono = "0.4.33"
